<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="16sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icn_cancel"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_str_dt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Start Date/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_str_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_str_lat_lng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Start Latitude/Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_str_dt"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_str_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:enabled="false"
            android:textColor="@color/black"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_str_loc_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Start Location Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_str_lat_lng"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_str_loc_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:inputType="textMultiLine"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_end_dt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="End Date/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_str_loc_add"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_end_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_end_lat_lng"
        
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="End Latitude/Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_end_dt"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_end_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:enabled="false"
            android:textColor="@color/black"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_end_loc_add"
        
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="End Location Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_end_lat_lng"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_end_loc_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:inputType="textMultiLine"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tot_dis"
        
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Total Distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_end_loc_add"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_tot_dis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:inputType="textMultiLine"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_trvl_mod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/trvlmod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/til_tot_dis"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_trvl_mod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_complaintNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/complaint_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_trvl_mod"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_complaintNo"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/photo2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xxlarge45"
        android:background="@drawable/icn_box"
        android:drawableEnd="@drawable/red_icn"
        android:layout_marginTop="@dimen/size_tinny10"
        android:padding="@dimen/space_mid10"
        android:singleLine="true"
        android:text="@string/end_photo"
        android:textColor="@color/black"
        android:textSize="@dimen/size_xlarge20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_complaintNo"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2"
          android:gravity="center"
          android:layout_marginTop="@dimen/_10sdp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.900"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/photo2">



          <TextView
              android:id="@+id/btn_cnfrm"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:background="@layout/rounded_corner_blue"
              android:gravity="center"
              android:padding="@dimen/space_mid10"
              android:text="@string/confirm_"
              android:textColor="@color/white"
              android:textSize="14sp"
              android:layout_weight="1"
              android:layout_marginRight="@dimen/_2sdp"
              />

          <TextView
              android:id="@+id/btn_cncl"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@layout/rounded_corner_blue"
              android:gravity="center"
              android:padding="@dimen/space_mid10"
              android:text="@string/cancel"
              android:textColor="@color/white"
              android:textSize="14sp"
              android:layout_weight="1"
              android:layout_marginLeft="@dimen/_2sdp" />

      </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>